--- a/micrograd/micrograd.ipynb
+++ b/micrograd/micrograd.ipynb
@@ -1219,25 +1219,506 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.float64"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7071066904050358\n",
+      "---\n",
+      "x2 0.5000001283844369\n",
+      "w2 0.0\n",
+      "x1 -1.5000003851533106\n",
+      "w2 0.0\n"
+     ]
     }
    ],
    "source": [
     "import torch\n",
     "\n",
+    "# x1,x2, w1, w2 are leaf nodes and therefore nothing we'd usually like the gradients for\n",
     "x1 = torch.Tensor([2.0]).double() ; x1.requires_grad = True\n",
     "x2 = torch.Tensor([0.0]).double() ; x2.requires_grad = True\n",
     "w1 = torch.Tensor([-3.0]).double() ; w1.requires_grad = True\n",
     "w2 = torch.Tensor([1.0]).double() ; w2.requires_grad = True\n",
-    "w2.dtype\n",
-    "\n"
+    "b = torch.Tensor([6.8813735870195432]).double() ; b.requires_grad = True\n",
+    "n = x1*w1 + x2*w2 + b\n",
+    "o = torch.tanh(n)\n",
+    "\n",
+    "\n",
+    "print(o.data.item())\n",
+    "o.backward()\n",
+    "\n",
+    "print('---')\n",
+    "print('x2', x2.grad.item())\n",
+    "print('w2', w2.grad.item())\n",
+    "print('x1', x1.grad.item())\n",
+    "print('w2', w2.grad.item())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "804e2517",
+   "metadata": {},
+   "source": [
+    "### implement the MLP myself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "id": "0f651ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "id": "130f833f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input\n",
+    "x = [[3.0, 0.1, 4.0],\n",
+    "     [1.0, 10.0, 7.0],\n",
+    "     [3.0, 1.0, 3.0],\n",
+    "     [4.0, 4.0, 7.0]]\n",
+    "\n",
+    "y = [1.0, -1.0, 1.0, -1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 628,
+   "id": "24cb25c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Neuron():\n",
+    "    \n",
+    "    def __init__(self, nin: int):\n",
+    "        self.w = [Value(random.uniform(-1, 1)) for _ in range(nin)]\n",
+    "        self.b = Value(random.uniform(-1, 1))\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        act = sum([wi * xi for wi, xi in zip(self.w, x)]) + self.b\n",
+    "        out = act.tanh()\n",
+    "        return out\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return self.w + [self.b]\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Neuron(nin={len(self.w)})\"\n",
+    "    \n",
+    "\n",
+    "class Layer():\n",
+    "    \n",
+    "    def __init__(self, nin: int, nout: int):\n",
+    "        self.neurons = [Neuron(nin) for _ in range(nout)]\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        out = [neuron(x) for neuron in self.neurons]\n",
+    "        return out[0] if len(out)==1 else out\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [p for neuron in self.neurons for p in neuron.parameters()]\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Layer(neurons={len(self.neurons)})\"\n",
+    "    \n",
+    "    \n",
+    "class MLP():\n",
+    "    \n",
+    "    def __init__(self, nin: int, nouts: list):\n",
+    "        sz = [nin] + nouts\n",
+    "        self.layers = [Layer(sz[i], sz[i+1]) for i in range(len(nouts))]\n",
+    "        \n",
+    "    def __call__(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "    \n",
+    "        return x\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [p for layer in self.layers for p in layer.parameters()]\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        layer_sizes = [len(layer.neurons) for layer in self.layers]\n",
+    "        arch = \" → \".join(map(str, layer_sizes))\n",
+    "        return f\"MLP({arch})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 649,
+   "id": "367142af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model\n",
+    "nn = MLP(3, [3, 5, 5, 1])\n",
+    "# loss\n",
+    "def mse(pred, gtruth):\n",
+    "    return sum([(x-y)**2 for x, y in zip(pred, gtruth)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cfd38ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2.54 [0.35, -0.94, 0.33, 0.29]\n",
+      "1 2.34 [0.38, -0.94, 0.34, 0.23]\n",
+      "2 1.68 [0.44, -0.95, 0.39, -0.0]\n",
+      "3 0.63 [0.51, -0.96, 0.46, -0.69]\n",
+      "4 0.22 [0.8, -0.97, 0.79, -0.63]\n",
+      "5 0.1 [0.8, -0.98, 0.78, -0.87]\n",
+      "6 0.07 [0.84, -0.98, 0.83, -0.87]\n",
+      "7 0.06 [0.86, -0.98, 0.85, -0.88]\n",
+      "8 0.05 [0.87, -0.98, 0.86, -0.89]\n",
+      "9 0.04 [0.88, -0.98, 0.88, -0.89]\n",
+      "10 0.04 [0.89, -0.98, 0.88, -0.9]\n",
+      "11 0.03 [0.9, -0.98, 0.89, -0.9]\n",
+      "12 0.03 [0.9, -0.98, 0.9, -0.91]\n",
+      "13 0.03 [0.91, -0.98, 0.9, -0.91]\n",
+      "14 0.02 [0.91, -0.98, 0.91, -0.92]\n",
+      "15 0.02 [0.92, -0.98, 0.91, -0.92]\n",
+      "16 0.02 [0.92, -0.98, 0.91, -0.92]\n",
+      "17 0.02 [0.92, -0.98, 0.92, -0.93]\n",
+      "18 0.02 [0.93, -0.98, 0.92, -0.93]\n",
+      "19 0.02 [0.93, -0.98, 0.92, -0.93]\n",
+      "20 0.02 [0.93, -0.98, 0.92, -0.93]\n",
+      "21 0.01 [0.93, -0.98, 0.93, -0.93]\n",
+      "22 0.01 [0.93, -0.98, 0.93, -0.93]\n",
+      "23 0.01 [0.94, -0.98, 0.93, -0.94]\n",
+      "24 0.01 [0.94, -0.99, 0.93, -0.94]\n",
+      "25 0.01 [0.94, -0.99, 0.93, -0.94]\n",
+      "26 0.01 [0.94, -0.99, 0.94, -0.94]\n",
+      "27 0.01 [0.94, -0.99, 0.94, -0.94]\n",
+      "28 0.01 [0.94, -0.99, 0.94, -0.94]\n",
+      "29 0.01 [0.94, -0.99, 0.94, -0.94]\n",
+      "30 0.01 [0.94, -0.99, 0.94, -0.94]\n",
+      "31 0.01 [0.95, -0.99, 0.94, -0.95]\n",
+      "32 0.01 [0.95, -0.99, 0.94, -0.95]\n",
+      "33 0.01 [0.95, -0.99, 0.94, -0.95]\n",
+      "34 0.01 [0.95, -0.99, 0.94, -0.95]\n",
+      "35 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "36 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "37 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "38 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "39 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "40 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "41 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "42 0.01 [0.95, -0.99, 0.95, -0.95]\n",
+      "43 0.01 [0.96, -0.99, 0.95, -0.95]\n",
+      "44 0.01 [0.96, -0.99, 0.95, -0.95]\n",
+      "45 0.01 [0.96, -0.99, 0.95, -0.96]\n",
+      "46 0.01 [0.96, -0.99, 0.95, -0.96]\n",
+      "47 0.01 [0.96, -0.99, 0.95, -0.96]\n",
+      "48 0.01 [0.96, -0.99, 0.95, -0.96]\n",
+      "49 0.01 [0.96, -0.99, 0.95, -0.96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train loop\n",
+    "for i in range(50):\n",
+    "    \n",
+    "    # forward pass\n",
+    "    preds = [nn(xi) for xi in x]\n",
+    "    loss = mse(preds, y)\n",
+    "    \n",
+    "    # backward pass\n",
+    "    # zero gradients\n",
+    "    for p in nn.parameters():\n",
+    "        p.grad = 0.0\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # gradients\n",
+    "    for p in nn.parameters():\n",
+    "        p.data += -p.grad * 0.1\n",
+    "    \n",
+    "    print(i, round(loss.data,2),[round(pred.data,2) for pred in preds])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91cbbd34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a76bbc4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de505c69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7e4876f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1074fe4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af8ca867",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ee2898",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9249dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b2e1521",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da9906c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "ce7119a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9403150700253231"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.uniform(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "id": "e671f541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Neuron:\n",
+    "    \n",
+    "    def __init__(self, nin):\n",
+    "        self.w = [Value(random.uniform(-1,1)) for _ in range(nin)]\n",
+    "        self.b = Value(random.uniform(-1,1))\n",
+    "        \n",
+    "    def __call__(self, x):\n",
+    "        # w * x + b\n",
+    "        act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b)\n",
+    "        out = act.tanh()\n",
+    "        return out\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return self.w + [self.b]\n",
+    "    \n",
+    "class Layer:\n",
+    "    \n",
+    "    def __init__(self, nin, nout):\n",
+    "        self.neurons = [Neuron(nin) for _ in range(nout)]\n",
+    "        \n",
+    "    def __call__(self, x):\n",
+    "        outs = [n(x) for n in self.neurons]\n",
+    "        return outs[0] if len(outs) == 1 else outs\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        params = [p for neuron in self.neurons for p in neuron.parameters()]\n",
+    "        return params\n",
+    "\n",
+    "class MLP:\n",
+    "    \n",
+    "    def __init__(self, nin, nouts):\n",
+    "        sz = [nin] + nouts\n",
+    "        self.layers = [Layer(sz[i], sz[i+1]) for i in range(len(nouts))]\n",
+    "        \n",
+    "    def __call__(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        params = [p for layer in self.layers for p in layer.parameters()]\n",
+    "        return params\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "id": "18d471a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=0.8513068487259103)"
+      ]
+     },
+     "execution_count": 429,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [2.0, 3.0, -1.0]\n",
+    "n = MLP(3, [4, 4, 1])\n",
+    "n(x)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "id": "812ff921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = [\n",
+    "    [2.0, 3.0, -1.0],\n",
+    "    [3.0, -1.0, 0.5],\n",
+    "    [0.5, 1.0, 1.0],\n",
+    "    [1.0, 1.0, -1.0],\n",
+    "]\n",
+    "ys = [1.0, -1.0, -1.0, 1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "id": "e3ca2f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 7.5233470008886\n",
+      "1 7.2942889759731315\n",
+      "2 6.7642875593529075\n",
+      "3 5.018507842177153\n",
+      "4 2.079776704481752\n",
+      "5 0.8861690538841113\n",
+      "6 0.28664537434545034\n",
+      "7 0.20859038962274726\n",
+      "8 0.16469933293112746\n",
+      "9 0.13599521896603936\n",
+      "10 0.11572625512064932\n",
+      "11 0.10065644968572261\n",
+      "12 0.0890192401149429\n",
+      "13 0.07976618135301661\n",
+      "14 0.0722355993061624\n",
+      "15 0.06598942131812405\n",
+      "16 0.060726186541573676\n",
+      "17 0.05623171516341843\n",
+      "18 0.05234969759627299\n",
+      "19 0.04896341458278618\n"
+     ]
+    }
+   ],
+   "source": [
+    "# forward pass\n",
+    "for k in range(20):\n",
+    "    \n",
+    "    # forward pass\n",
+    "    ypred = [n(x) for x in xs]\n",
+    "    loss = sum([(yout-ygt)**2 for ygt, yout in zip(ys, ypred)])\n",
+    "    \n",
+    "    # backward pass\n",
+    "    for p in n.parameters():\n",
+    "        p.grad = 0.0\n",
+    "    loss.backward()\n",
+    "        \n",
+    "    # update\n",
+    "    # gradient vector points in direction of increasing the loss, so we have to -\n",
+    "    for p in n.parameters():\n",
+    "        p.data += -0.05 * p.grad\n",
+    "        \n",
+    "    print(k, loss.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "id": "2ad3e1ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(data=0.9999999326356308),\n",
+       " Value(data=-1.0),\n",
+       " Value(data=-1.0),\n",
+       " Value(data=0.9999999325893372)]"
+      ]
+     },
+     "execution_count": 427,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred"
    ]
   }
  ],
